<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical"
        >

        <include
            android:id="@+id/header"
            layout="@layout/header"/>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/view_15"
                android:paddingBottom="@dimen/view_8"
                android:layout_marginBottom="@dimen/view_8">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivRider"
                        android:layout_width="@dimen/view_150dp"
                        android:layout_height="@dimen/view_150dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/green_circle"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivAdd"
                            android:layout_width="@dimen/view_30"
                            android:layout_height="@dimen/view_30"
                            android:src="@android:drawable/ic_input_add"
                            android:tint="@color/white"
                            />

                        <TextView
                            android:id="@+id/tvADd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_rider_photo"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_14" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(optional)"
                            android:textColor="@color/white"
                            android:textSize="@dimen/txt_14" />

                    </LinearLayout>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_first_name"
                    android:textSize="@dimen/txt_18"
                    android:textColor="@color/dark_gray"
                    android:layout_marginTop="@dimen/view_20"/>

                <EditText
                    android:id="@+id/etFirst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_first_name"
                    android:background="@drawable/gray_border"
                    android:textSize="@dimen/txt_18"
                    android:textColor="@color/light_gray"
                    android:inputType="textPersonName"
                    android:gravity="center_vertical|start"
                    android:layout_marginTop="@dimen/view_5"
                    android:padding="@dimen/view_8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_last_name"
                    android:textSize="@dimen/txt_18"
                    android:textColor="@color/dark_gray"
                    android:layout_marginTop="@dimen/view_8"/>

                <EditText
                    android:id="@+id/etLast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_last_name"
                    android:background="@drawable/gray_border"
                    android:textSize="@dimen/txt_18"
                    android:gravity="center_vertical|start"
                    android:layout_marginTop="@dimen/view_5"
                    android:textColor="@color/light_gray"
                    android:inputType="textPersonName"
                    android:padding="@dimen/view_8"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/view_8"
                    android:weightSum="1"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="@dimen/view_5"
                        android:layout_weight="0.5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/birthday"
                            android:textSize="@dimen/txt_18"
                            android:textColor="@color/dark_gray"
                            android:layout_marginTop="@dimen/view_5"/>

                        <TextView
                            android:id="@+id/tvBirthday"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="DD/MM/YYYY"
                            android:background="@drawable/gray_border"
                            android:textSize="@dimen/txt_18"
                            android:gravity="center_vertical|start"
                            android:layout_marginTop="@dimen/view_5"
                            android:textColor="@color/light_gray"
                            android:padding="@dimen/view_8"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="@dimen/view_5"
                        android:layout_weight="0.5">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="@dimen/txt_18"
                            android:textColor="@color/dark_gray"
                            android:layout_marginTop="@dimen/view_5"/>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/view_40"
                            android:background="@drawable/gray_border"
                            android:layout_marginTop="@dimen/view_5"
                            >

                            <Spinner
                                android:id="@+id/SpGender"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/view_40"
                                android:textColor="@color/light_gray"
                                android:textSize="@dimen/txt_18"
                                android:gravity="center_vertical"
                                />

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rider_phone_number_optional"
                    android:textSize="@dimen/txt_18"
                    android:textColor="@color/dark_gray"
                    android:layout_marginTop="@dimen/view_8"/>

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:background="@drawable/gray_border"
                    android:textSize="@dimen/txt_18"
                    android:textColor="@color/light_gray"
                    android:gravity="center_vertical|start"
                    android:layout_marginTop="@dimen/view_5"
                    android:inputType="number"
                    android:padding="@dimen/view_8"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/need_a_booster_seat"
                        android:textSize="@dimen/txt_18"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:textColor="@color/dark_gray"
                        android:layout_marginTop="@dimen/view_5"/>


                    <Switch
                        android:id="@+id/swBooster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        />


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_10"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/can_they_sit_in_the_front_seat"
                        android:textSize="@dimen/txt_18"
                        android:textColor="@color/dark_gray"
                       />

                        <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/child_must_be_atleast_4_9"
                        android:textSize="@dimen/txt_14"
                        android:textColor="@color/light_gray"/>

                    </LinearLayout>
                    <Switch
                        android:id="@+id/swSeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/view_5"
                        />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/which_car_drivers_do_you_prefers"
                    android:textSize="@dimen/txt_18"
                    android:textColor="@color/dark_gray"
                    android:layout_marginTop="@dimen/view_10"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/view_40"
                    android:background="@drawable/gray_border"
                    android:layout_marginTop="@dimen/view_5"
                    >

                    <Spinner
                        android:id="@+id/spPrefer"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/view_40"
                        android:textColor="@color/light_gray"
                        android:textSize="@dimen/txt_18"
                        android:gravity="center_vertical"
                        />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/secret_code_word"
                    android:textSize="@dimen/txt_18"
                    android:textColor="@color/dark_gray"
                    android:layout_marginTop="@dimen/view_8"/>

                <EditText
                    android:id="@+id/etSecret"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/secret_code"
                    android:background="@drawable/gray_border"
                    android:textSize="@dimen/txt_18"
                    android:textColor="@color/light_gray"
                    android:gravity="center_vertical|start"
                    android:layout_marginTop="@dimen/view_5"
                    android:inputType="text"
                    android:layout_marginBottom="@dimen/view_5"
                    android:padding="@dimen/view_8"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_secret_code"
                    android:textSize="@dimen/txt_14"
                    android:layout_marginTop="@dimen/view_1"
                    android:textColor="@color/light_gray"/>

                <com.taxi.nanny.custom.CustomButtonTextRegular
                    android:id="@+id/tvSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/view_10"
                    android:layout_marginRight="@dimen/view_10"
                    android:layout_marginBottom="@dimen/view_15"
                    android:layout_marginTop="@dimen/view_30"
                    android:background="@drawable/button_shape"
                    android:padding="@dimen/margin_5"
                    android:text="@string/txt_submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_18"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>



    </LinearLayout>


</android.support.constraint.ConstraintLayout>