<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".7"
            android:orientation="vertical"
            android:background="@color/colorGreen">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_20"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/view_8"
                android:layout_marginTop="@dimen/view_10"
                android:padding="@dimen/view_5"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                   >

                    <TextView
                        android:id="@+id/tvPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="75 %"
                        android:textColor="@color/white"
                        android:textSize="@dimen/view_30"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        />

                    <TextView
                        android:id="@+id/tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/complete"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_20"
                        android:layout_below="@+id/tvPercent"
                        android:layout_centerVertical="true"
                        />



                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight=".3"
            android:paddingBottom="@dimen/view_20"
            android:orientation="vertical"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_80"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/view_100dp"
                        android:layout_height="@dimen/view_100dp"
                        android:layout_gravity="center"
                        android:padding="@dimen/view_10"
                        android:src="@drawable/ic_message" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/view_1"
                        android:text="@string/let_s_add_your_riders_amp_locations"
                        android:textColor="@color/colorGreen"
                        android:textSize="@dimen/txt_16" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/view_1"
                        android:text="@string/it_s_quick_easy_and_will_save_your_time_later"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/txt_16" />

                </LinearLayout>

                <com.taxi.nanny.custom.CustomButtonTextRegular
                    android:id="@+id/bt_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/view_10"
                    android:layout_marginRight="@dimen/view_10"
                    android:layout_marginBottom="@dimen/view_15"
                    android:background="@drawable/button_shape"
                    android:padding="@dimen/margin_5"
                    android:text="@string/rider_add"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_18" />

            </RelativeLayout>

        </LinearLayout>

</LinearLayout>
</android.support.constraint.ConstraintLayout>